# capstone

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILDING.md  Brewfile  Brewfile.android  CMakeLists.txt  CMakePresets.json  COMPILE  COMPILE.TXT  COMPILE_CMAKE.TXT  COMPILE_MAKE.TXT  COMPILE_MSVC.TXT  CONFIG  CONTRIBUTING.md  CREDITS.TXT  ChangeLog  HACK  HACK.TXT  LEB128.h  LICENSE.TXT  MANIFEST.in  MCAsmInfo.h  MCDisassembler.h  MCFixedLenDisassembler.h  MCInst.c  MCInst.h  MCInstPrinter.c  MCInstPrinter.h  MCInstrDesc.c  MCInstrDesc.h  MCRegisterInfo.c  MCRegisterInfo.h  Makefile  Makefile.am  Makefile.global  (+51 more)
bindings/ocaml/: Makefile  README  aarch64.ml  arm.ml  arm64.ml  arm64_const.ml  arm_const.ml  capstone.ml  capstone.opam  dune-project  evm_const.ml  m680x.ml  m680x_const.ml  m68k_const.ml  mips.ml  mips_const.ml  neo_const.ml  ocaml.c  ppc.ml  ppc_const.ml  sparc.ml  sparc_const.ml  systemz.ml  systemz_const.ml  sysz_const.ml  test.ml  test_aarch64.ml  test_arm.ml  test_arm64.ml  test_detail.ml  test_m680x.ml  test_mips.ml  test_ppc.ml  test_sparc.ml  test_systemz.ml  test_x86.ml  test_xcore.ml  tms320c64x_const.ml  wasm_const.ml  x86.ml  (+3 more)
bindings/ocaml/src/: aarch64.ml  aarch64_const.ml  arm.ml  capstone.ml  dune  m680x.ml  m680x_const.ml  mips.ml  ocaml.c  ppc.ml  ppc_const.ml  sparc.ml  systemz.ml  x86.ml  xcore.ml  xcore_const.ml
bindings/ocaml/test/: dune  test_aarch64.ml  test_arm.ml  test_basic.ml  test_detail.ml  test_mips.ml  test_ppc.ml  test_sparc.ml  test_systemz.ml  test_x86.ml  test_xcore.ml
bindings/python/cstest_py/: README.md  pyproject.toml
bindings/python/py_cstest/: cstest.py  pyproject.toml
suite/auto-sync/: .gitignore  ARCHITECTURE.md  LLVM_Deprecated_Features.md  PatchMainHeader.py  README.md  RefactorGuide.md  Update-Arch.sh  format_py.sh  intro.md  pyproject.toml
suite/auto-sync/CppTranslator/: Configurator.py  CppTranslator.py  Differ.py  Helper.py  README.md  TemplateCollector.py  arch_config.json  saved_patches.json
suite/auto-sync/Updater/: .gitignore  ASUpdater.py  Helper.py  IncGenerator.py  PatchMainHeader.py  PathVarHandler.py  README.md  Update-Arch.sh  path_vars.json  requirements.txt  updater_config.json
suite/auto-sync/c_tests/: CMakeLists.txt  README.md
suite/auto-sync/inc_patches/: 01_LDM_and_VSCCLRM_written_reglists.patch  01_LDM_written_reglists.patch  02_VSCCLRM_written_reglists.patch  03_Vector_Data_Type.patch  04_Vector_size.patch
suite/cstest/: CMakeLists.txt  Makefile  README.md  build_cstest.sh  cstest_report.py  issues.cs  report.py
suite/cstest/include/: capstone_test.h  cstest.h  cyaml_schemas.h  factory.h  helper.h  test_case.h  test_compare.h  test_detail.h  test_detail_aarch64.h  test_detail_alpha.h  test_detail_arm.h  test_detail_bpf.h  test_detail_evm.h  test_detail_hppa.h  test_detail_loongarch.h  test_detail_m680x.h  test_detail_m68k.h  test_detail_mips.h  test_detail_mos65xx.h  test_detail_ppc.h  test_detail_riscv.h  test_detail_sh.h  test_detail_sparc.h  test_detail_systemz.h  test_detail_tms320c64x.h  test_detail_tricore.h  test_detail_wasm.h  test_detail_x86.h  test_detail_xcore.h  test_mapping.h  test_mappings.h  test_run.h
suite/cstest/src/: aarch64_detail.c  alpha_detail.c  arm64_detail.c  arm_detail.c  bpf_detail.c  capstone_test.c  cstest.c  evm_detail.c  helper.c  hppa_detail.c  loongarch_detail.c  m680x_detail.c  m68k_detail.c  main.c  mips_detail.c  mos65xx_detail.c  ppc_detail.c  riscv_detail.c  sparc_detail.c  systemz_detail.c  test_case.c  test_detail.c  test_detail_aarch64.c  test_detail_alpha.c  test_detail_arm.c  test_detail_bpf.c  test_detail_evm.c  test_detail_hppa.c  test_detail_loongarch.c  test_detail_m680x.c  test_detail_m68k.c  test_detail_mips.c  test_detail_mos65xx.c  test_detail_ppc.c  test_detail_riscv.c  test_detail_sh.c  test_detail_sparc.c  test_detail_systemz.c  test_detail_tms320c64x.c  test_detail_tricore.c  (+9 more)
suite/cstest/test/: CMakeLists.txt  README.md  integration_tests.py  invalid_cs_input.yaml  invalid_test_file.yaml  min_valid_test_file.yaml  missing_madatory_field.yaml  run_tests.sh
tests/: .gitignore  CMakeLists.txt  Makefile  README  README.md  fuzz_harness.c  run_tests.sh  test.c  test_aarch64.c  test_all.sh  test_alpha.c  test_arm.c  test_arm64.c  test_basic.c  test_bpf.c  test_customized_mnem.c  test_detail.c  test_evm.c  test_hppa.c  test_infra.h  test_iter.c  test_iter_benchmark.c  test_loongarch.c  test_m680x.c  test_m68k.c  test_mips.c  test_mos65xx.c  test_neo.c  test_ppc.c  test_riscv.c  test_sh.c  test_skipdata.c  test_sparc.c  test_systemz.c  test_tms320c64x.c  test_tricore.c  test_utils.c  test_utils.h  test_wasm.c  test_winkernel.cpp  (+2 more)
tests/MC/AArch64/: a64-ignored-fields.txt.yaml  arm32-elf-relocs.s.yaml  arm64-basic-a64-instructions.s.yaml  arm64-elf-relocs.s.yaml  arm64-nv-cond.s.yaml  arm64-target-specific-sysreg.s.yaml  arm64-verbose-vector-case.s.yaml  arm64e.s.yaml  armv8.1a-vhe.s.yaml  armv8.2a-at.s.yaml  armv8.2a-dotprod.s.yaml  armv8.2a-persistent-memory.s.yaml  armv8.3a-ID_ISAR6_EL1.s.yaml  armv8.3a-complex.s.yaml  armv8.3a-complex_nofp16.s.yaml  armv8.3a-js.s.yaml  armv8.3a-pauth.s.yaml  armv8.3a-rcpc.s.yaml  armv8.3a-signed-pointer.s.yaml  armv8.4a-flag.s.yaml  armv8.4a-flagm.s.yaml  armv8.4a-ldst.s.yaml  (+119 more)
tests/cs_details/: issue.cs  issues.cs
tests/details/: README.md  aarch64.yaml  alpha.yaml  arm.yaml  bpf.yaml  cs_common_details.yaml  evm.yaml  hppa.yaml  loongarch.yaml  m680x.yaml  m68k.yaml  mips.yaml  mos65xx.yaml  moved.yaml  ppc.yaml  riscv.yaml  sh.yaml  sparc.yaml  systemz.yaml  tms320c64x.yaml  tricore.yaml  wasm.yaml  x86.yaml  xcore.yaml
tests/expected_output/: test_arm  test_arm64  test_basic  test_detail  test_iter  test_mips  test_ppc  test_skipdata  test_sparc  test_systemz  test_x86  test_xcore
tests/features/: skipdata.yaml
tests/integration/: CMakeLists.txt  README.md  test_customized_mnem.c  test_iter.c  test_litbase.c  test_skipdata.c
tests/issues/: fuzzing.yaml  issues.yaml
tests/unit/: CMakeLists.txt  README.md  sstream.c  utils.c
(+3929 files in other folders)
